<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="nano_degree_app_port">Nanodegree Application Portfolio</string>

    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="spotify_streamer_toast">One day you will be redirected to the Spotify Streamer application!</string>
    <string name="scores_app">Scores App</string>
    <string name="scores_toast">One day you will be redirected to the Scores application!</string>
    <string name="library_app">Library App</string>
    <string name="library_app_toast">One day you will be redirected to the Library application!</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="build_it_bigger_toast">One day you will be redirected to the Build it Bigger application!</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="xyz_reader_toast">One day you will be redirected to the XYZ Reader application!</string>
    <string name="capstone">Capstone: SoDash</string>
    <string name="capstone_toast">One day you will be redirected to the SoDash application!</string>

</resources>
