<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainAppSelectorActivityFragment"
    android:orientation="vertical">

    <TextView
        android:text="@string/nano_degree_app_port"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"/>
    <Button
        android:id="@+id/spotify_button"
        android:text="@string/spotify_streamer"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#80bfff"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/scores_button"
        android:text="@string/scores_app"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#80bfff"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/library_button"
        android:text="@string/library_app"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#80bfff"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/build_bigger_button"
        android:text="@string/build_it_bigger"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#80bfff"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/xyz_button"
        android:text="@string/xyz_reader"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#80bfff"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>
    <Button
        android:id="@+id/capstone_button"
        android:text="@string/capstone"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="fill_parent"
        android:background="#0066cc"
        android:layout_marginBottom="10dp"
        android:layout_weight=".5"/>

</LinearLayout>
